--- a/src/app/components/slot/add.slot.html
+++ b/src/app/components/slot/add.slot.html
@@ -23,31 +23,29 @@
                                     <fieldset>
                                         <div class="form-group">
                                             <label for="firstname">Slot Name</label>
-                                            <input id="category" class="form-control" name="slot" type="text"
-                                                [(ngModel)]="slot" />
+                                            <input id="category" class="form-control" name="slot" type="text" [(ngModel)]="slot" />
                                         </div>
                                         <div class="form-group date date-picker">
                                             <label>Date: </label>
-                                            <my-date-picker name="mydate" [options]="myDatePickerOptions" [(ngModel)]="model"
-                                                required></my-date-picker>
+                                            <my-date-picker name="mydate" [options]="myDatePickerOptions" [(ngModel)]="model" required></my-date-picker>
                                         </div>
                                         <div class="form-group">
-                                            <label for="firstname">Start Time</label>
-                                            <input class="form-control" type="time" atp-time-picker [(ngModel)]="starttime"
-                                                name="starttime" />
+                                            <h6 for="firstname">Start Time</h6>
+                                            <kendo-timepicker [(value)]="value" style="width:400px"></kendo-timepicker>
+                                            <!-- <input class="form-control" type="time" atp-time-picker [(ngModel)]="starttime"
+                                                name="starttime" /> -->
                                         </div>
                                         <div class="form-group">
-                                            <label for="firstname">End Time</label>
-                                            <input class="form-control" type="time" atp-time-picker [(ngModel)]="endtime"
-                                                name="endtime" />
+                                            <h6 for="firstname">End Time</h6>
+                                            <kendo-timepicker [(value1)]="value1" style="width:400px"></kendo-timepicker>
+                                            <!-- <input class="form-control" type="time" atp-time-picker [(ngModel)]="endtime"
+                                                name="endtime" /> -->
                                         </div>
                                         <br>
-                                        <button type="submit" *ngIf="!deliveryId" class="btn btn-primary vendor-button"
-                                            (click)="addSlot()">
+                                        <button type="submit" *ngIf="!deliveryId" class="btn btn-primary vendor-button" (click)="addSlot()">
                                             Add
                                         </button>
-                                        <button type="submit" *ngIf="deliveryId" class="btn btn-primary vendor-button"
-                                            (click)="addDelivory()">
+                                        <button type="submit" *ngIf="deliveryId" class="btn btn-primary vendor-button" (click)="addDelivory()">
                                             Update
                                         </button>
                                     </fieldset>
