--- a/src/app/components/offers/offers.component.html
+++ b/src/app/components/offers/offers.component.html
@@ -16,7 +16,7 @@
                 <div class="card">
                     <div class="card-body">
                         <!-- <a href="" id="show" class="btn  btn-maron" style="float: right">Export To Excel</a> -->
-                        <a routerLink="/addbestDeals" (click)="addCoupon('')" id="show" class="btn  btn-maron" style="float: right">Add
+                        <a routerLink="/addOffers" (click)="addCoupon('')" id="show" class="btn  btn-maron" style="float: right">Add
                             Coupon
                         </a>
                         <h4 class="card-title">
