--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <router-outlet>
 </router-outlet>
 <sampleEditor></sampleEditor>
-
+<ng4-loading-spinner [threshold]="1000" [timeout]="6000" [template]="template" [loadingText]="'Please wait...'" [zIndex]="9999">
+</ng4-loading-spinner>
 <!-- Contenedor -->
 <!-- <ul id="accordion" class="accordion">
     <li>
