--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -57,7 +57,7 @@ strong{
     margin-right: 20px;  
 }
 ::placeholder{
-    color: black;
+    color: #999999;
 }
 .checkbox-inline{
     margin-bottom: 0px !important;
@@ -97,19 +97,21 @@ label{
 }
 .pagination {
     display: inline-block;
+    margin-top: 20px;
   }
   
   .pagination a {
     color: black;
     float: left;
-    padding: 8px 16px;
+    padding:0.1875rem 0.625rem;
     text-decoration: none;
     transition: background-color .3s;
   }
   
   .pagination a.active {
-    background-color: #4CAF50;
+    background-color:#2199e8;
     color: white;
+    border:none !important;
   }
   /* .present:active{
       background:red;
