--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -15,12 +15,12 @@
                     <span class="menu-title sub">Sub Categories </span>
                 </a>
             </li>
-            <li class="nav-item" [ngClass]="{'active':pageNav==='vendors' || pageNav==='addvendors'}">
+            <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='vendors' || pageNav==='addvendors'}">
                 <a class="nav-link" routerLink="/vendors">
                     <i class="icon-people menu-icon"></i>
                     <span class="menu-title">Admin List</span>
                 </a>
-            </li>
+            </li> -->
             <li class="nav-item" [ngClass]="{'active':pageNav==='offers' || pageNav==='addOffers'}">
                 <a class="nav-link" routerLink="/offers">
                     <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
